--- a/static/attachments.html
+++ b/static/attachments.html
@@ -5,15 +5,24 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     <body>
-        <div role="main" class="h-100 container-fluid">
+        <div role="main" class="h-100 container-fluid" id="main">
+            <div id="print-container" class="row mt-5 justify-content-center">
+                <input type="button" id="btn-pdf" value="Generate PDF" class="btn btn-primary"/>
+            </div>
             <div id="info-container" class="row justify-content-center">
             </div>
             <div class="row mt-5 justify-content-center">
                 <div id="data-container" class="col-4 align-self-center">
                 </div>
             </div>
+            <div class="row mt-5 mb-5 justify-content-center">
+                <div class="col-4 align-self-center">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+            </div>
         </div>
         <script src="js/utils.js"></script>
+        <script src="js/jspdf.min.js"></script>
         <script src="js/attachments.js"></script>
     </body>
 </html>
